Mobi extractor: only extract what is asked

BUG: 465006